--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,6 +38,10 @@ header {
 }
 
 footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-top: 200px;
   padding-bottom: 18px;
 }
