--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,8 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  max-width: 1260px;
   padding-top: 200px;
   padding-bottom: 18px;
 }
